app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          # ✔ All configMap vars removed
          # ✔ Direct env variables added
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: training
                  operator: In
                  values:
                    - devops
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
                - key: training
                  operator: In
                  values:
                    - devops
        antiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fitness-tracker-app
              topologyKey: "kubernetes.io/hostname"
---
 
apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 81
    targetPort: 5000
  type: LoadBalancer
