route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-tracker-route
  namespace: default
spec:
  parentRefs:
  - name: mahesh-kgateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fitness-tracker-service
      port: 81
